--- a/Formulário.html
+++ b/Formulário.html
@@ -52,17 +52,20 @@
                 <label for="bio">Biografia:</label> <br>
                 <textarea name="bio" id="bio" cols="30" rows="5"></textarea> <br>
 
-                <label for="famil" >Quem mora com você (Pode selecionar mais de 1)?</label>
-                <input type="checkbox" name="famil" id="cachorro">Cachorro
-                <input type="checkbox" name="famil" id="gato" >Gato
-                <input type="checkbox" name="famil" id="Pássaro" >Pássaro
-
-                <label for="animal" >Você tem animais (Pode selecionar mais de 1)?</label>
+                <label for="famil" >Quem mora com você? (Pode selecionar mais de 1)</label>
+                <input type="checkbox" name="famil" id="pai">Pai(s)
+                <input type="checkbox" name="famil" id="mae">Mãe(s)
+                <input type="checkbox" name="famil" id="irmao">Irmão(ã)
+                <input type="checkbox" name="famil" id="filho">Filho(a) 
+                <input type="checkbox" name="famil" id="sozinho">Moro sozinho(a)
+                <input type="checkbox" name="famil" id="outrofamil">Outro
+                <br>
+                <label for="animal" >Você tem animais? (Pode selecionar mais de 1)</label>
                 <input type="checkbox" name="animal" id="cachorro">Cachorro
                 <input type="checkbox" name="animal" id="gato" >Gato
                 <input type="checkbox" name="animal" id="Pássaro" >Pássaro
                 <input type="checkbox" name="animal" id="pexe" >Peixe
-                <input type="checkbox" name="animal" id="outro" >Outro
+                <input type="checkbox" name="animal" id="outroanimal" >Outro
                 <input type="checkbox" name="animal" id="npossuo" >Não possuo
             </div>
         </fieldset> <br>
