--- a/Formulário.html
+++ b/Formulário.html
@@ -20,7 +20,7 @@
 
                 <label for="sobrenome">Sobrenome:</label>
                 <input type="text" name="sobrenome" id="sobrenome" required> <br> <br>
-            </div><div>
+            
                 <label for="usuário">Nome de usuário:</label>
                 <input type="text" name="usuário" id="usuário" required> <br> <br>
         
@@ -47,12 +47,10 @@
         </fieldset>
         <h2 id="titulo">Para te conhecer:</h2>
         <fieldset>
-            <div>
                <div id="bioarea">
                 <label for="bio">Biografia:</label> <br>
-                <textarea name="bio" id="bio" cols="30" rows="5" required></textarea> <br>
-                </div>
-                <label for="famil" >Quem mora com você? (Pode selecionar mais de 1)</label>
+                <textarea name="bio" id="bio" cols="20%" rows="5%" required></textarea> <br>
+                <label for="famil" >Quem mora com você? (Pode selecionar mais de 1)</label> <br>
                 <input type="checkbox" name="famil" id="pai">Pai(s)
                 <input type="checkbox" name="famil" id="mae">Mãe(s)
                 <input type="checkbox" name="famil" id="irmao">Irmão(ã)
@@ -60,7 +58,7 @@
                 <input type="checkbox" name="famil" id="sozinho">Moro sozinho(a)
                 <input type="checkbox" name="famil" id="outrofamil">Outro
                 <br>
-                <label for="animal" >Você tem animais? (Pode selecionar mais de 1)</label>
+                <label for="animal" >Você tem animais? (Pode selecionar mais de 1)</label> <br>
                 <input type="checkbox" name="animal" id="cachorro">Cachorro
                 <input type="checkbox" name="animal" id="gato" >Gato
                 <input type="checkbox" name="animal" id="Pássaro" >Pássaro
